fix for collapse menu on ios

--- a/src/_assets/scss/layout/_page_header.scss
+++ b/src/_assets/scss/layout/_page_header.scss
@@ -106,6 +106,7 @@
     .secondary-collapse-trigger {
       position: relative;
       cursor: pointer;
+      display: block;
       &::after {
         content: '+';
         display: block;
